Unify syzygy search and streamline documentation